src/app/quantum-mads/shared/top-nav-bar/top-nav-bar.component.scss
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");

/* font-family: 'Open Sans', sans-serif; */

@import url("https://fonts.googleapis.com/css2?family=Public+Sans:wght@600&display=swap");

/* font-family: 'Public Sans', sans-serif; */

.wrapper {
    position: sticky;
    top: 0;
    z-index: 9999;
}

.wrapper .main_content {
    width: 100%;
    background: #22272e;
    color: #bdb8d7;
    padding: 20px;
}

.topNavBar-bgColor {
    background: var(--bg-color);
}

.title-size {
    background: linear-gradient( 312deg, rgba(204, 73, 166, 1) 12%, rgba(19, 161, 179, 1) 87%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-size: 27px;
    text-align: center;
}

.exchangeMenu-dropdown:hover {
    background: var(--topNav-exchange-color);
    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
    .dropdown-menu {
        display: block;
        background: var(--topNav-exchange-color);
        box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
        border: 1px solid var(--nav-border-color);
        border-top: none;
    }
}

.fa-sm {
    font-size: 9px;
    position: absolute;
    padding-left: 8px;
    color: var(--text-pink);
    cursor: pointer;
}

.fa-sm:hover {
    color: #fff;
}

.nav-tabs {
    border-bottom: unset !important;
}

table {
    width: 100%;
}

td {
    color: var(--text-light-color);
    border: 1px solid var(--border-color);
    padding: 15px 0 15px 0;
}

td img {
    height: 15px;
    // width: 60px;
}

td:hover {
    border: 1px double var(--text-pink);
}

tr:nth-child(1) td:nth-child(2) {
    border: 1px double var(--text-pink);
}

.leftmenu {
    justify-content: space-between;
    position: relative;
    display: inline-flex;
    align-items: center;
}

.default {
    color: #fff;
}

button:hover {
    background-color: unset !important;
    color: #ec3aa4 !important;
}

.txt-cen {
    text-align: center;
}

.img-align {
    height: 30px;
    width: 32px;
}

.flag-list {
    width: 100% !important;
    background-color: var(--bg-color);
}

.flag-list li {
    color: #fff;
    padding: 7px;
    padding-left: 14px;
    font-family: "Open Sans", sans-serif;
    font-size: 10px;
}

.flag-list li:hover {
    color: var(--text-pink);
    background: unset;
}

.dropdown-menu {
    min-width: unset !important;
    border: 1px solid var(--nav-border-color);
}

.dropdown i {
    padding-top: 12px;
}

.flag {
    height: 16px;
    margin: 0 2px 0 1px;
}

.countryFlag {
    font-family: "Open Sans", sans-serif;
    font-size: 12px;
}

.countryFlag:hover {
    color: var(--text-pink);
    .flag-list {
        display: block;
    }
}

.borderlines {
    border: 1px solid var(--nav-border-color);
    cursor: pointer;
}

.toggle-checkbox {
    display: none;
}

html {
    font-size: 62.5%;
}

.toggle-checkbox {
    display: none;
}

.toggle-switch {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: block;
    background-color: #fff;
    width: 45px;
    height: 18px;
    border-radius: 5rem;
    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.3);
}

.toggle-switch::before {
    content: "\f185";
    font-family: "FontAwesome";
    position: absolute;
    background-color: #faee35;
    color: #a39a18;
    width: 23px;
    height: 23px;
    border-radius: 50%;
    /* border: 1px solid var(--nav-border-color); */
    top: -10%;
    left: 0.5%;
    text-align: center;
    font-size: 15px;
    line-height: 23px;
    transition: all 0.4s;
    z-index: 10;
}

.toggle-switch::after {
    position: absolute;
    top: 50%;
    left: 45%;
    transform: translateY(-50%);
    font-size: 20px;
    line-height: 30px;
    text-transform: capitalize;
    color: #a39a18;
}

.toggle-switch:hover {
    cursor: pointer;
}

.toggle-checkbox:checked+.toggle-switch {
    background-color: #555;
}

.toggle-checkbox:checked+.toggle-switch::before {
    content: "\f186";
    font-family: "FontAwesome";
    position: absolute;
    background-color: #fff;
    color: #000;
    width: 23px;
    height: 23px;
    border-radius: 50%;
    border: 1px solid var(--nav-border-color);
    top: -10%;
    left: 50%;
    text-align: center;
    font-size: 15px;
    line-height: 21px;
}

.toggle-checkbox:checked+.toggle-switch::after {
    position: absolute;
    top: 50%;
    left: 7%;
    transform: translateY(-50%);
    font-size: 2rem;
    font-weight: 900;
    text-transform: capitalize;
    color: #000;
}

.toggle-checkbox:checked~.background {
    background-color: #1b2b34;
}

.icon::before {
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    display: inline-block;
    font-family: "Font Awesome 5 Pro";
    font-weight: 900;
    font-style: normal;
    font-variant: normal;
    text-rendering: auto;
}

